--- a/src/App.scss
+++ b/src/App.scss
@@ -1,52 +1,23 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
-.logo-box {
-  position: relative;
-  height: 9em;
-}
-
-.logo {
-  position: absolute;
-  left: calc(50% - 4.5em);
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.App {
+  background-color: #302d4c;
+  height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+  // 隐藏滑轮
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .logo.electron {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.download-box {
+  height: 30vw;
+  width: 60vw;
+  background-color: #fff;
+  border-radius: 15px;
+  border: #302d4c 5px solid;
 }
